ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker contrast fixes

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -345,6 +345,7 @@ span.data-entry-addon {
 .jqx-grid-cell a.focus, .jqx-grid-cell a:focus {text-decoration: underline;	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
 	box-shadow: none;}
 .text-success {color:#1e5d16 !important;}
+.btn-link {color:#2f6eb1 !important;}
 /************************
 *************************
 BELOW: SPECIMEN DETAIL STYLES 
